Fixed display on iPhones

--- a/src/scss/pages/main.scss
+++ b/src/scss/pages/main.scss
@@ -61,7 +61,8 @@
   position: absolute;
   top: 85%;
   display: block;
-  cursor: pointer;
+	cursor: pointer;
+	overflow-x: hidden;
   width: 100%;
   height: 100px;
 }
